--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -16,7 +16,7 @@ $color-grey-666: #666;
 $color-grey-555: #555;
 $color-grey-999: #999;
 $color-grey-b3b: #b3b3b3;
-$color-red: #b90017;
+$color-blue: #055be6;
 $color-green: #03bb03fd;
 
 // Assets
