--- a/src/assets/styles/base/mixins.scss
+++ b/src/assets/styles/base/mixins.scss
@@ -50,7 +50,7 @@
     border-top: 0.5em solid rgba(213, 28, 83, 0.1);
     border-right: 0.5em solid rgba(213, 28, 83, 0.1);
     border-bottom: 0.5em solid rgba(213, 28, 83, 0.1);
-    border-left: 0.5em solid $color-red;
+    border-left: 0.5em solid $color-blue;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
@@ -77,4 +77,14 @@
       transform: rotate(360deg);
     }
   }
+}
+
+@mixin pricePlan {
+  background-color: #fff;
+  color: #333;
+  padding: 0 4.5px;
+  border-radius: 10px;
+  font-size: 14px;
+  margin-top: 1px;
+  display: inline-block;
 }
