--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,14 +23,28 @@ body {
   height: 100vh;
   width: 100vw;
   .App-header {
-    background-color: $color-red;
+    background-color: $color-blue;
     height: 10vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 1vmin);
     color: $color-white;
+    justify-items: flex-start;
+    h1 {
+      display: flex;
+      flex-direction: column;
+      width: 35%;
+      margin-left: 60px;
+    }
+    .input-search-area {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 20px;
+      align-items: flex-start;
+    }
   }
   .content-body {
     height: calc(90vh - 40px);
@@ -43,25 +57,53 @@ body {
       width: 100%;
       position: relative;
       .left-panel {
-        max-width: 35vw;
-        min-width: 120px;
-        overflow-y: scroll;
+        max-width: 260px;
+        overflow-y: auto;
         overflow-x: hidden;
         display: flex;
         flex-direction: column;
-        flex-basis: 100%;
         flex: 1;
         height: 100%;
+        border-right: 1px solid #ccc;
+        .categories-wrapper {
+          padding: 2em;
+          .menu-left {
+            .category-container {
+              ul {
+                padding: 0;
+                margin: 0;
+              }
+            }
+          }
+          .item-category {
+            list-style: none;
+            padding: 5px 10px;
+            margin: 0;
+            cursor: pointer;
+            &:hover {
+              background-color: $color-blue;
+              color: $color-white;
+              transition: all 150ms ease-in;
+            }
+          }
+        }
       }
       .right-panel {
         display: flex;
         flex-direction: column;
         flex-basis: 100%;
         flex: 1;
-        max-width: 65vw;
+        width: calc(100vw - 260px);
         overflow-y: auto;
         overflow-x: hidden;
         height: 100%;
+        padding: 20px;
+        .search-label {
+          .text-searched {
+            color: $color-blue;
+            font-size: 1.1em;
+          }
+        }
       }
     }
   }
@@ -79,7 +121,7 @@ body {
 }
 
 .error-container {
-  color: $color-red;
+  color: $color-blue;
 
   text-align: center;
   height: 100%;
