--- a/src/assets/styles/apps.scss
+++ b/src/assets/styles/apps.scss
@@ -1,7 +1,6 @@
 .search-results-area {
   display: flex;
-  flex: 1;
-  flex-direction: row;
+  flex-direction: column;
   ul.apps-listing {
     display: grid;
     grid-template-rows: auto;
@@ -20,7 +19,7 @@
       grid-template-columns: repeat(3, calc(33% - 1.125rem));
     }
     @media screen and (min-width: 1201px) {
-      grid-template-columns: repeat(4, calc(25% - 1.125rem));
+      grid-template-columns: repeat(3, calc(33% - 1.125rem));
     }
 
     li.app-item {
@@ -167,6 +166,49 @@
             }
           }
         }
+      }
+    }
+  }
+  .pagination {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    .paginationItem {
+      background: #fff;
+      border: 2px solid #666;
+      padding: 10px 15px;
+      border-radius: 50%;
+      height: 45px;
+      width: 45px;
+      position: relative;
+      margin: 0 5px;
+      cursor: pointer;
+      span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      &.active {
+        border: 1px solid #888;
+        color: #888;
+        pointer-events: none;
+      }
+    }
+    .prev,
+    .next {
+      background: #fff;
+      border: none;
+      padding: 10px;
+      color: blue;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+      margin: 0 10px;
+      cursor: pointer;
+      &.disabled {
+        pointer-events: none;
+        box-shadow: none;
+        color: #999;
       }
     }
   }
