--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -16,8 +16,22 @@ $color-grey-666: #666;
 $color-grey-555: #555;
 $color-grey-999: #999;
 $color-grey-b3b: #b3b3b3;
+$color-grey-ede: #ededed;
 $color-blue: #055be6;
 $color-green: #03bb03fd;
+$color-orange: #e67700;
+
+//Plans
+$color-subscrition: $color-orange;
+$color-plan-trial: $color-green;
+$color-plan-professional: $color-orange;
+$color-plan-premium: #3946f9;
+$color-plan-starter: #b082f5;
+$color-plan-plus: #8739f9;
+$color-plan-enterprise: #6403f5;
 
 // Assets
 $color-scroll-corner: rgba(0, 0, 0, 0.5);
+
+//General
+$color-box-shadow: rgba(0, 0, 0, 0.15);
