--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,4 +3,6 @@
 @import "base/mixins";
 @import "main";
 @import "search";
-@import "apps.scss";
+@import "pagination";
+@import "app.item";
+@import "app.list";
