--- a/src/assets/styles/search.scss
+++ b/src/assets/styles/search.scss
@@ -3,7 +3,7 @@
     display: flex;
     z-index: 3;
     height: 44px;
-    background: #fff;
+    background: $color-white;
     border: 1px solid #dfe1e5;
     box-shadow: none;
     border-radius: 24px;
@@ -13,9 +13,9 @@
     position: relative;
     margin-left: 15%;
     &:hover {
-      background-color: #fff;
-      box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
-      border-color: rgba(223, 225, 229, 0);
+      background-color: $color-white;
+      box-shadow: 0 1px 6px $color-box-shadow;
+      border-color: transparent;
     }
 
     .input-text {
@@ -25,7 +25,7 @@
       margin-top: 5px;
       margin-left: 20px;
       padding: 0;
-      color: rgba(0, 0, 0, 0.87);
+      color: $color-grey-333;
       word-wrap: break-word;
       outline: none;
       display: flex;
